--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <div class="main">
     <div class="qr">
-      <img src="image-qr-code.png">
+      <img src="image-qr-code.png" alt="qrcode">
     </div>
     <div class="txt">
       <h3> Improve your front-end skills by building projects</h3>
